Fixed z-index

--- a/app/assets/sass/course-catalogue.scss
+++ b/app/assets/sass/course-catalogue.scss
@@ -168,6 +168,7 @@
   #nav-page.navbar-fixed-top{
     position: fixed;
     top: 4.4rem;
+    z-index: 1;
   }
 }
 
